2005-03-26  Peter Osterlund  <petero2@telia.com>

	* (p4-passwd, p4-login, p4-logout): New functions to implement
	support for the corresponding p4 commands.
	* (p4-exec-p4): Added support for automatic login when needed.
	* Removed trailing whitespace.
	* (p4-blame-kill-blame, p4-blame-secondary-buffer-cleanup):
	Removed unused code.
	* (p4-font-lock-buffer): p4-blame and p4-print didn't work for
	files whose buffers are set to read-only mode by set-auto-mode.
	* (p4-activate-print-buffer): In the header line in p4-blame and
	p4-print buffers, make the change number clickable.

2004-06-11  Rajesh Vaidheeswarran <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.7
	* Documentation fixes.
	* (p4-get-server-version): Fix regexp to be less picky

2004-06-11  Rajesh Vaidheeswarran <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.6
	* (p4-follow-link-name): Add check for cygwin
	* (p4-cygpath): New function to do cygwin path mangling

2004-06-11  Rajesh Vaidheeswarran <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.5
	* (p4-group, p4-groups): New defuns. Appropriate adds to existing
	defuns to incorporate the new features
	* (p4-make-face): Use the simpler facep and lose distro-specific issues
	* miscellaneous doc fixes

2004-05-18  Rajesh Vaidheeswarran  <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump to 10.4
	* Update all email addresses in this list with some bogus string
	to prevent auto-reaping of email addresses from this file

2004-05-18  David Lum <david.lum!@noSpam_LosEthIs@amdocs.com>

	* (p4-make-face): Add new defun to make a face only if it doesn't
	already exist.

2003-09-12  Rajesh Vaidheeswarran  <rv!@noSpam_LosEthIs@dsmit.com>

	* (p4-version): Bump version to 10.3
	* p4.el.html: Document `p4-ediff2', `p4-depot-find-file' and
	`p4-bug-report'
	* thanks.html: Add P T Withington for p4-ediff2 related changes
	* TODO: Remove note about documenting `p4-depot-find-file'
