@@ -1,3 +1,8 @@
+2005-03-27  Peter Osterlund  <petero2@telia.com>
+
+	* (p4-exec-p4): Also ask for p4 password if the session has
+	expired.
+
 2005-03-26  Peter Osterlund  <petero2@telia.com>
 
 	* (p4-passwd, p4-login, p4-logout): New functions to implement
